Fix the skipped messages from overflowing the EMLogs table

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ div.configDiv {
 }
 
 #searchHistory button {
-    min-width: 55px
+    min-width: 60px;
 }
 
 /*#searchHistory tbody td:nth-child(1) {*/
